@@ -6,7 +6,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="jre" location="${home}/jre_base_desktop"/>
-  <property name="version" value="0.22"/>
+  <property name="version" value="0.23"/>
 
   <property name="debian.depends" value="ffmpeg"/>
   <property name="fedora.depends" value="ffmpeg"/>
