@@ -1,2 +1,2 @@
-\bin\jdk-12\bin\java  -cp javaforce.jar;filters.jar;jfvideo.jar VideoApp
+java  -cp javaforce.jar;filters.jar;jfvideo.jar VideoApp
 ::-XX:+AlwaysUseJNICritical %1
